force-app/main/default/objects/Account/listViews/RevenueCloud.listView-meta.xml
<ListView>
    <fullName>RevenueCloud</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>LegalEntity__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>