force-app/main/default/objects/Account/listViews/RevenueCloud_Account_All.listView-meta.xml
<ListView>
    <fullName>RevenueCloud_Account_All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Legal_Entity__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>